--- a/app/src/main/res/layout/fragment_edit_bill_details.xml
+++ b/app/src/main/res/layout/fragment_edit_bill_details.xml
@@ -70,7 +70,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/text_color_heading_reverse">
+    android:background="@color/white_n_black">
 
       <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="match_parent"
@@ -94,6 +94,7 @@
                   android:layout_height="50dp"
                   android:padding="@dimen/_15dp"
                   android:layout_marginEnd="-10dp"
+                  app:tint="@color/image_primary_n_dark"
                   android:src="@drawable/addcustomer_light"
                   app:layout_constraintStart_toStartOf="@+id/addCustomer"/>
               <TextView android:fontFamily="@font/montserrat_regular"
@@ -102,7 +103,7 @@
                   android:gravity="center"
                   android:textSize="@dimen/txt_16sp"
                   android:id="@+id/addCustomer"
-                  android:textColor="@color/colorPrimary"
+                  android:textColor="@color/text_primary_n_dark"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
@@ -128,7 +129,7 @@
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toTopOf="parent"
                   android:textSize="20sp"
-                  android:textColor="@color/colorPrimary"
+                  android:textColor="@color/text_primary_n_dark"
                   android:id="@+id/tvCustomerName"
                   android:text="@{customer.customerName}"
                   tools:text="Demo"/>
@@ -237,7 +238,7 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         android:text="Gst RS :  "
                         android:id="@+id/txtGstAmount"
-                        android:textColor="@color/colorPrimary" />
+                        android:textColor="@color/text_primary_n_dark" />
 
                     <androidx.appcompat.widget.AppCompatTextView android:fontFamily="@font/montserrat_regular"
                         android:layout_width="wrap_content"
@@ -247,7 +248,7 @@
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"
                         android:text="@{gstAppliedAmount}"
-                        android:textColor="@color/colorPrimary"
+                        android:textColor="@color/text_primary_n_dark"
                         tools:text="10"
                         android:id="@+id/tvGst"/>
                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -260,7 +261,7 @@
                     app:layout_constraintTop_toTopOf="parent"
                     android:text="Add Gst"
                     android:visibility="@{isGSTApplied ? View.GONE : View.VISIBLE}"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/text_primary_n_dark"
                     android:id="@+id/addGst"/>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -298,7 +299,7 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         android:text="Packaging RS:  "
                         android:id="@+id/txtPackageAmount"
-                        android:textColor="@color/colorPrimary" />
+                        android:textColor="@color/text_primary_n_dark" />
 
                     <androidx.appcompat.widget.AppCompatTextView android:fontFamily="@font/montserrat_regular"
                         android:layout_width="wrap_content"
@@ -308,7 +309,7 @@
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"
                         android:text="@{packagingAppliedAmount}"
-                        android:textColor="@color/colorPrimary"
+                        android:textColor="@color/text_primary_n_dark"
                         tools:text="10"
                         android:id="@+id/tvPack"/>
                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -322,7 +323,7 @@
                     app:layout_constraintTop_toTopOf="parent"
                     android:text="Add Packaging"
                     android:visibility="@{isPackagingApplied ? View.GONE : View.VISIBLE}"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/text_primary_n_dark"
                     android:id="@+id/addPackaging"/>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -361,7 +362,7 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         android:text="Other Charges RS :  "
                         android:id="@+id/txtOtherCharges"
-                        android:textColor="@color/colorPrimary" />
+                        android:textColor="@color/text_primary_n_dark" />
 
                     <androidx.appcompat.widget.AppCompatTextView android:fontFamily="@font/montserrat_regular"
                         android:layout_width="wrap_content"
@@ -371,7 +372,7 @@
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"
                         android:text="@{otherChargesAppliedAmount}"
-                        android:textColor="@color/colorPrimary"
+                        android:textColor="@color/text_primary_n_dark"
                         tools:text="10"
                         android:id="@+id/tvOtherCharges"/>
                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -385,7 +386,7 @@
                     app:layout_constraintTop_toTopOf="parent"
                     android:text="Add Other Charges"
                     android:visibility="@{isOtherChargesApplied ? View.GONE : View.VISIBLE}"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/text_primary_n_dark"
                     android:id="@+id/addOtherCharges"/>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -435,7 +436,7 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         android:text="Discount RS :  "
                         android:id="@+id/txtDiscountAmount"
-                        android:textColor="@color/colorPrimary" />
+                        android:textColor="@color/text_primary_n_dark" />
 
                     <androidx.appcompat.widget.AppCompatTextView
                         android:fontFamily="@font/montserrat_regular"
@@ -446,7 +447,7 @@
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"
                         android:text="@{discountedAmount}"
-                        android:textColor="@color/colorPrimary"
+                        android:textColor="@color/text_primary_n_dark"
                         tools:text="10"
                         android:id="@+id/tvDiscount"/>
                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -459,7 +460,7 @@
                     app:layout_constraintTop_toTopOf="parent"
                     android:text="Add Discount"
                     android:visibility="@{isDiscountApplied ? View.GONE : View.VISIBLE}"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/text_primary_n_dark"
                     android:id="@+id/addDiscount"/>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -492,7 +493,7 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     android:text="CreditNote Amount RS :  "
                     android:id="@+id/txtcreditNoteAmount"
-                    android:textColor="@color/colorPrimary" />
+                    android:textColor="@color/text_primary_n_dark" />
 
                 <androidx.appcompat.widget.AppCompatTextView android:fontFamily="@font/montserrat_regular"
                     android:layout_width="wrap_content"
@@ -502,7 +503,7 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     android:text="@{creditNote.totalAmount}"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/text_primary_n_dark"
                     tools:text="10"
                     android:id="@+id/tvCreditNote"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -515,7 +516,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/discountView"
                 android:text='@{isCreditNoteApplied ? "" :"Add Credit Note"}'
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/text_primary_n_dark"
                 android:id="@+id/addCreditNote"
                 tools:text="Add Credit Note"/>
 
@@ -566,7 +567,7 @@
                     android:layout_weight="4"
                     android:paddingTop="@dimen/_5dp"
                     android:layout_gravity="center"
-                    android:src="@drawable/cash_light"
+                    android:src="@drawable/cash_light_v"
                     android:id="@+id/backImage" />
 
                 <TextView android:fontFamily="@font/montserrat_regular"
@@ -600,7 +601,7 @@
                     android:layout_height="0dp"
                     android:paddingTop="@dimen/_5dp"
                     android:layout_weight="4"
-                    android:src="@drawable/creditcard_light" />
+                    android:src="@drawable/creditcard_light_v" />
 
                 <TextView android:fontFamily="@font/montserrat_regular"
                     android:layout_width="match_parent"
@@ -634,7 +635,7 @@
                     android:layout_height="0dp"
                     android:paddingTop="@dimen/_5dp"
                     android:layout_weight="4"
-                    android:src="@drawable/split_light" />
+                    android:src="@drawable/split_light_v" />
 
                 <TextView android:fontFamily="@font/montserrat_regular"
                     android:layout_width="match_parent"
@@ -668,6 +669,7 @@
                     android:layout_height="0dp"
                     android:paddingTop="@dimen/_5dp"
                     android:layout_weight="4"
+                    app:tint="@color/image_primary_n_dark"
                     android:src="@drawable/writing_light" />
 
                 <TextView android:fontFamily="@font/montserrat_regular"
