--- a/app/src/main/res/layout/fragment_receipt.xml
+++ b/app/src/main/res/layout/fragment_receipt.xml
@@ -38,7 +38,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/white_n_black">
 
 
         <com.kreativesquadz.billkit.utils.ZigzagView
@@ -492,7 +493,7 @@
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
-                        android:background="#000000"
+                        android:background="@color/text_color_main"
                         android:layout_marginTop="10dp"
                         android:layout_marginBottom="10dp"/>
 
@@ -735,15 +736,13 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <ImageView
-                    android:paddingTop="@dimen/_15dp"
-                    android:layout_width="45dp"
+                    android:layout_width="match_parent"
                     android:layout_height="0dp"
-                    android:layout_weight="4"
-                    android:layout_marginTop="@dimen/_20dp"
+                    android:paddingTop="@dimen/_20dp"
                     android:paddingBottom="@dimen/_10dp"
-                    android:layout_marginBottom="@dimen/_10dp"
-                    android:layout_gravity="center"
-                    android:id="@+id/backImage" />
+                    android:layout_weight="4"
+                    android:id="@+id/backImage"
+                    app:tint="@color/image_primary_n_dark"/>
 
                 <TextView android:fontFamily="@font/montserrat_medium"
                     android:layout_width="match_parent"
@@ -780,6 +779,7 @@
                     android:paddingTop="@dimen/_20dp"
                     android:paddingBottom="@dimen/_10dp"
                     android:layout_weight="4"
+                    app:tint="@color/image_primary_n_dark"
                     android:src="@drawable/share" />
 
                 <TextView android:fontFamily="@font/montserrat_medium"
