--- a/app/src/main/res/layout/item_invoice_prefix_number.xml
+++ b/app/src/main/res/layout/item_invoice_prefix_number.xml
@@ -64,7 +64,7 @@
                     android:id="@+id/tvReuse"
                     android:gravity="center_vertical"
                     android:paddingEnd="@dimen/_30dp"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/text_primary_n_dark"
                     android:text="Reuse"/>
                 <ImageView
                     android:layout_width="25dp"
