--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,7 +17,7 @@
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingBottom="@dimen/activity_vertical_margin"
-        android:background="@color/text_color_heading_reverse"
+        android:background="@color/white_n_black"
         tools:context=".ui.login.LoginActivity">
 
         <TextView android:fontFamily="@font/montserrat_regular"
@@ -59,7 +59,7 @@
             android:textStyle="bold"
             android:gravity="center"
             android:textSize="42sp"
-            android:textColor="@color/colorPrimary" />
+            android:textColor="@color/text_primary_n_dark" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -121,7 +121,7 @@
                     android:layout_marginBottom="@dimen/_8dp"
                     android:textStyle="bold"
                     android:layout_weight="2"
-                    app:cardBackgroundColor="@color/colorPrimaryDark"
+                    app:cardBackgroundColor="@color/btn_primary_n_dark"
                     android:textColor="@color/text_color_heading"
                     android:gravity="center">
 
@@ -219,7 +219,7 @@
                     android:layout_marginBottom="@dimen/_8dp"
                     android:textStyle="bold"
                     android:layout_weight="2"
-                    app:cardBackgroundColor="@color/colorPrimaryDark"
+                    app:cardBackgroundColor="@color/btn_primary_n_dark"
                     android:textColor="@color/text_color_heading"
                     android:gravity="center">
 
