--- a/app/src/main/res/layout/fragment_add_credit.xml
+++ b/app/src/main/res/layout/fragment_add_credit.xml
@@ -13,12 +13,13 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:background="@color/white_n_black"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_margin="@dimen/_10dp"
             android:background="@drawable/corner_four_grey"
             android:orientation="vertical">
@@ -42,7 +43,7 @@
                         android:layout_height="wrap_content"
                         android:text='@{"Customer Name : "+customer.CustomerName}'
                         android:textSize="@dimen/txt_16sp"
-                        android:textColor="@color/colorPrimary"
+                        android:textColor="@color/text_primary_n_dark"
                         android:textStyle="bold"
                         android:paddingBottom="4dp"
                         tools:text="Customer Name :  DEMO" />
@@ -78,7 +79,7 @@
                             android:id="@+id/creditAmountTextView"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textColor="@color/colorPrimary"
+                            android:textColor="@color/text_primary_n_dark"
                             android:text="@{customer.creditAmount}"
                             android:textSize="@dimen/txt_16sp"
 
@@ -154,7 +155,7 @@
                     app:cardCornerRadius="@dimen/_5dp"
                     app:cardUseCompatPadding="true"
                     android:textStyle="bold"
-                    app:cardBackgroundColor="@color/colorPrimaryDark"
+                    app:cardBackgroundColor="@color/btn_primary_n_dark"
                     android:textColor="@color/text_color_heading"
                     android:gravity="center">
 
@@ -187,6 +188,7 @@
                 android:id="@+id/tabLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@color/white_n_black"
                 app:tabMode="fixed"
                 app:tabGravity="fill" />
 
