--- a/app/src/main/res/layout/fragment_bill_history.xml
+++ b/app/src/main/res/layout/fragment_bill_history.xml
@@ -11,7 +11,8 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/white_n_black">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -31,6 +32,7 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    app:tint="@color/image_primary_n_dark"
                     android:src="@drawable/calender"/>
 
                 <TextView android:fontFamily="@font/montserrat_regular"
@@ -41,7 +43,8 @@
                     android:textSize="@dimen/txt_16sp"
                     android:layout_marginStart="@dimen/_5dp"
                     android:layout_marginEnd="@dimen/_5dp"
-                    android:textColor="@color/black"/>
+                    android:textStyle="bold"
+                    android:textColor="@color/text_primary_n_dark"/>
 
 
 
@@ -53,6 +56,7 @@
                 android:layout_margin="@dimen/_10dp"
                 android:padding="@dimen/_10dp"
                 android:src="@drawable/search_icon"
+                app:tint="@color/image_primary_n_dark"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"/>
 
