--- a/app/src/main/res/layout/fragment_credit_note_details.xml
+++ b/app/src/main/res/layout/fragment_credit_note_details.xml
@@ -101,7 +101,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:textColor="@color/text_color_main"
+                            android:textColor="@color/text_primary_n_dark"
                             android:textSize="25sp"
                             android:layout_marginEnd="@dimen/_10dp"
                             android:layout_marginStart="10dp"
@@ -143,7 +143,7 @@
                             android:text='@{"Credit Note No : " + creditNote.id}'
                             android:gravity="center_horizontal"
                             android:textSize="@dimen/txt_16sp"
-                            android:textColor="@color/colorPrimary"
+                            android:textColor="@color/text_primary_n_dark"
                             tools:text="Credit Note No : 0002"/>
                         <TextView
                             android:fontFamily="@font/montserrat_medium"
@@ -153,7 +153,7 @@
                             android:text='@{creditNote.status}'
                             android:gravity="center_horizontal"
                             android:textSize="@dimen/txt_16sp"
-                            android:textColor='@{ isActive ? @color/colorPrimary  : @color/red }'
+                            android:textColor='@{isActive ? @color/text_primary_n_dark  : @color/red }'
                             tools:text="Cleared"/>
                         <TextView
                             android:fontFamily="@font/montserrat_medium"
@@ -164,7 +164,7 @@
                             android:gravity="center_horizontal"
                             android:textSize="@dimen/txt_16sp"
                             android:layout_marginBottom="@dimen/_10dp"
-                            android:textColor="@color/colorPrimary"
+                            android:textColor="@color/text_primary_n_dark"
                             tools:text="Cleared by Admin"/>
                         <View
                             android:layout_width="match_parent"
@@ -441,6 +441,7 @@
                         android:layout_height="0dp"
                         android:paddingTop="@dimen/_15dp"
                         android:layout_weight="4"
+                        app:tint="@color/image_primary_n_dark"
                         android:src="@drawable/salesreturn_light" />
 
                     <TextView android:fontFamily="@font/montserrat_medium"
@@ -473,6 +474,7 @@
                         android:layout_height="0dp"
                         android:paddingTop="@dimen/_15dp"
                         android:layout_weight="4"
+                        app:tint="@color/image_primary_n_dark"
                         android:src="@drawable/refund" />
 
                     <TextView android:fontFamily="@font/montserrat_medium"
@@ -506,6 +508,7 @@
                         android:layout_height="0dp"
                         android:paddingTop="@dimen/_15dp"
                         android:layout_weight="4"
+                        app:tint="@color/image_primary_n_dark"
                         android:src="@drawable/receipt" />
 
                     <TextView android:fontFamily="@font/montserrat_medium"
@@ -557,7 +560,7 @@
                     android:layout_height="match_parent"
                     android:text="CreditNote Refunded"
                     android:layout_weight="1"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/text_primary_n_dark"
                     android:textSize="@dimen/txt_12sp"
                     android:textStyle="bold"
                     android:gravity="center|left"/>
