--- a/app/src/main/res/layout/fragment_edit_item_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_edit_item_bottom_sheet.xml
@@ -15,7 +15,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white_n_black"
+        android:clipToPadding="true"
+        android:clipChildren="true"
         android:orientation="vertical">
+
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -32,6 +36,7 @@
                 android:padding="@dimen/_10dp"
                 android:text="Edit Item"
                 android:textSize="@dimen/txt_18sp"
+                android:textColor="@color/text_color_main"
                 android:textStyle="bold"
                 tools:layout_editor_absoluteX="-16dp"
                 tools:layout_editor_absoluteY="0dp" />
@@ -74,7 +79,7 @@
                     android:textSize="@dimen/txt_14sp"
                     android:padding="@dimen/_15dp"
                     android:editable="false"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/text_primary_n_dark"
                     android:text='@{invoiceName}'
                     android:id="@+id/etItemName"
                     android:hint="Item Name" />
@@ -106,7 +111,7 @@
                         android:padding="@dimen/_15dp"
                         android:text="@{invoiceItem.unitPrice}"
                         android:textColorHint="@color/colorPrimary"
-
+                        android:textColor="@color/text_color_main"
                         android:inputType="number"
                         android:id="@+id/etPrice"
                         android:hint="Price" />
@@ -157,6 +162,8 @@
                             android:id="@+id/etQty"
                             android:textSize="@dimen/txt_14sp"
                             android:padding="@dimen/_15dp"
+                            android:gravity="center"
+                            android:textColor="@color/text_color_main"
                             android:text="@{invoiceItem.quantity}"
                             android:hint="Qty" />
                     </com.google.android.material.textfield.TextInputLayout>
@@ -176,7 +183,7 @@
                             android:id="@+id/txtPlus"
                             android:gravity="center"
                             android:background="@drawable/corner_four_grey"
-                            android:textColor="@color/colorPrimary"
+                            android:textColor="@color/text_primary_n_dark"
                             android:text="+"/>
 
                     </LinearLayout>
@@ -197,7 +204,7 @@
                 android:layout_marginStart="@dimen/_20dp"
                 android:layout_marginEnd="@dimen/_20dp"
                 android:layout_marginBottom="@dimen/_10dp"
-                app:cardBackgroundColor="@color/colorPrimaryDark"
+                app:cardBackgroundColor="@color/btn_primary_n_dark"
                 android:textColor="@color/text_color_heading"
                 android:gravity="center">
 
@@ -210,7 +217,7 @@
                     android:textStyle="bold"
                     android:gravity="center"
                     android:textSize="20sp"
-                    android:textColor="@color/text_color_heading_reverse"/>
+                    android:textColor="@color/white"/>
 
             </androidx.cardview.widget.CardView>
             <LinearLayout
