--- a/app/src/main/res/layout/fragment_edit_product.xml
+++ b/app/src/main/res/layout/fragment_edit_product.xml
@@ -14,7 +14,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/white_n_black">
 
         <androidx.core.widget.NestedScrollView
             android:layout_width="0dp"
@@ -70,7 +71,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="@dimen/_10dp"
                             android:textSize="@dimen/txt_18sp"
-                            android:textColor="@color/colorPrimary"
+                            android:textColor="@color/text_primary_n_dark"
                             android:text="@{product.productStock}"
                             tools:text="200"/>
                     </LinearLayout>
@@ -108,7 +109,7 @@
                         app:cardCornerRadius="@dimen/_5dp"
                         app:cardUseCompatPadding="true"
                         android:textStyle="bold"
-                        app:cardBackgroundColor="@color/colorPrimaryDark"
+                        app:cardBackgroundColor="@color/btn_primary_n_dark"
                         android:textColor="@color/text_color_heading"
                         android:gravity="center">
 
@@ -135,7 +136,7 @@
                     android:layout_marginStart="@dimen/_10dp"
                     android:layout_marginTop="@dimen/_10dp"
                     android:layout_marginBottom="@dimen/_10dp"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/text_primary_n_dark"
                     android:text="Product Information"/>
 
 
@@ -278,28 +279,28 @@
                                     android:hint="Barcode" />
                             </com.google.android.material.textfield.TextInputLayout>
 
-                            <LinearLayout
+                            <androidx.cardview.widget.CardView
                                 android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
+                                android:layout_height="match_parent"
                                 android:layout_weight="3"
-                                android:layout_marginTop="@dimen/_15dp"
-                                android:layout_marginBottom="@dimen/_15dp"
-                                android:layout_marginEnd="@dimen/_10dp"
-                                android:layout_marginStart="@dimen/_5dp"
-                                android:paddingStart="@dimen/_10dp"
-                                android:paddingEnd="@dimen/_10dp"
+                                app:cardCornerRadius="@dimen/_10dp"
+                                app:cardElevation="4dp"
+                                android:layout_marginTop="@dimen/_5dp"
+                                android:layout_marginBottom="@dimen/_5dp"
+                                app:cardUseCompatPadding="true"
                                 android:id="@+id/btnBarcode"
-                                android:background="@drawable/corner_four_stroke">
+                                android:textStyle="bold"
+                                android:textColor="@color/text_color_heading"
+                                android:gravity="center">
 
                                 <ImageView
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
-                                    android:paddingStart="@dimen/_10dp"
-                                    android:paddingEnd="@dimen/_10dp"
-                                    android:paddingTop="@dimen/_5dp"
-                                    android:paddingBottom="@dimen/_5dp"
+                                    android:padding="15dp"
+                                    android:id="@+id/imgBarcode"
+                                    app:tint="@color/image_primary_n_dark"
                                     android:src="@drawable/barcode" />
-                            </LinearLayout>
+                            </androidx.cardview.widget.CardView>
 
 
                         </LinearLayout>
@@ -329,7 +330,7 @@
                             android:layout_marginBottom="@dimen/_10dp"
                             android:textSize="@dimen/txt_16sp"
                             android:layout_marginTop="@dimen/_20dp"
-                            android:textColor="@color/colorPrimary"
+                            android:textColor="@color/text_primary_n_dark"
                             android:text="Tax"/>
 
                         <com.google.android.material.textfield.TextInputLayout
@@ -437,7 +438,7 @@
                 app:cardUseCompatPadding="true"
 
                 android:textStyle="bold"
-                app:cardBackgroundColor="@color/colorPrimaryDark"
+                app:cardBackgroundColor="@color/btn_primary_n_dark"
                 android:textColor="@color/text_color_heading"
                 android:gravity="center">
 
