--- a/app/src/main/res/layout/fragment_sale.xml
+++ b/app/src/main/res/layout/fragment_sale.xml
@@ -34,6 +34,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:id="@+id/recyclerViewCat"
+                    tools:listitem="@layout/item_category_home"
                     android:layout_marginTop="10dp" />
 
             </LinearLayout>
