--- a/app/src/main/res/layout/fragment_sale_return.xml
+++ b/app/src/main/res/layout/fragment_sale_return.xml
@@ -35,6 +35,7 @@
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white_n_black"
         android:scrollbars="none">
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -79,7 +80,7 @@
                         android:id="@+id/tvInvoice"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/colorPrimary"
+                        android:textColor="@color/text_primary_n_dark"
                         android:textSize="@dimen/txt_16sp"
                         app:layout_constraintStart_toEndOf="@id/txtInvoice"
                         app:layout_constraintTop_toTopOf="parent"
@@ -104,7 +105,7 @@
                         android:id="@+id/tvTotal"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/colorPrimary"
+                        android:textColor="@color/text_primary_n_dark"
                         android:textSize="@dimen/txt_16sp"
                         android:layout_marginEnd="@dimen/_10dp"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -131,7 +132,7 @@
                         android:id="@+id/tvItems"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/colorPrimary"
+                        android:textColor="@color/text_primary_n_dark"
                         android:textSize="@dimen/txt_16sp"
                         app:layout_constraintStart_toEndOf="@id/txtItems"
                         app:layout_constraintTop_toTopOf="@+id/txtItems"
@@ -155,7 +156,7 @@
                         android:id="@+id/tvDiscount"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/colorPrimary"
+                        android:textColor="@color/text_primary_n_dark"
                         android:textSize="@dimen/txt_16sp"
                         android:layout_marginTop="@dimen/_20dp"
                         android:layout_marginEnd="@dimen/_10dp"
@@ -404,7 +405,7 @@
                     app:cardUseCompatPadding="true"
                     android:layout_marginStart="@dimen/_10dp"
                     android:layout_marginEnd="@dimen/_10dp"
-                    app:cardBackgroundColor="@{isButtonActive ? @color/colorPrimary : @color/lite_grey_200}"
+                    app:cardBackgroundColor="@{isButtonActive ? @color/btn_primary_n_dark : @color/btn_light_grey }"
                     tools:cardBackgroundColor="@color/colorPrimary"
                     android:textStyle="bold"
                     android:textColor="@color/text_color_heading"
@@ -419,7 +420,7 @@
                         android:textStyle="bold"
                         android:gravity="center"
                         android:textSize="20sp"
-                        android:textColor="@color/text_color_heading_reverse"
+                        android:textColor="@color/white"
                         tools:text="REFUND"/>
                     <ProgressBar
                         android:id="@+id/progressBar"
