--- a/app/src/main/res/layout/fragment_sales.xml
+++ b/app/src/main/res/layout/fragment_sales.xml
@@ -7,6 +7,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white_n_black"
         android:orientation="vertical">
 
         <LinearLayout
@@ -18,7 +19,7 @@
             <TextView android:fontFamily="@font/montserrat_medium"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/text_primary_n_dark"
                 android:textSize="@dimen/txt_18sp"
                 android:text="Total Sales Credit "
                 android:paddingBottom="4dp" />
@@ -27,7 +28,7 @@
                 android:id="@+id/totalCreditAmount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/text_primary_n_dark"
                 android:textSize="@dimen/txt_24sp"
                 android:paddingBottom="4dp"
                 android:textStyle="bold"
