--- a/app/src/main/res/layout/fragment_search_bill.xml
+++ b/app/src/main/res/layout/fragment_search_bill.xml
@@ -10,6 +10,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white_n_black"
         android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
@@ -50,7 +51,7 @@
                 android:textStyle="bold"
                 android:layout_marginBottom="-5dp"
                 android:layout_marginStart="@dimen/_10dp"
-                app:cardBackgroundColor="@color/colorPrimaryDark"
+                app:cardBackgroundColor="@color/btn_primary_n_dark"
                 android:textColor="@color/text_color_heading"
                 android:gravity="center">
 
