--- a/app/src/main/res/layout/fragment_staff_sales_invoice.xml
+++ b/app/src/main/res/layout/fragment_staff_sales_invoice.xml
@@ -24,6 +24,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                app:tint="@color/image_primary_n_dark"
                 android:src="@drawable/calender"/>
 
             <TextView android:fontFamily="@font/montserrat_regular"
@@ -34,7 +35,7 @@
                 android:textSize="@dimen/txt_16sp"
                 android:layout_marginStart="@dimen/_5dp"
                 android:layout_marginEnd="@dimen/_5dp"
-                android:textColor="@color/black"/>
+                android:textColor="@color/text_color_main"/>
 
 
 
