--- a/app/src/main/res/layout/fragment_tax_for_quick_sell.xml
+++ b/app/src/main/res/layout/fragment_tax_for_quick_sell.xml
@@ -12,6 +12,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white_n_black"
         android:orientation="vertical">
         <TextView
             android:fontFamily="@font/montserrat_medium"
@@ -23,7 +24,7 @@
             android:layout_marginBottom="@dimen/_10dp"
             android:textSize="@dimen/txt_16sp"
             android:layout_marginTop="@dimen/_20dp"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/text_primary_n_dark"
             android:text="Default Tax for QuickSale"/>
 
         <com.google.android.material.textfield.TextInputLayout
