--- a/app/src/main/res/layout/item_bluetooth_device.xml
+++ b/app/src/main/res/layout/item_bluetooth_device.xml
@@ -23,7 +23,7 @@
         <ImageView
             android:layout_width="@dimen/_30dp"
             android:layout_height="@dimen/_30dp"
-            android:src="@drawable/printer_icon"
+            android:src="@drawable/printer_icon_v"
             android:contentDescription="@string/printer_icon" />
 
         <LinearLayout
@@ -39,7 +39,7 @@
                 android:layout_height="wrap_content"
                 android:text="@{device.name}"
                 android:textSize="16sp"
-                android:textColor="@color/black"
+                android:textColor="@color/text_primary_n_dark"
                 android:textStyle="bold"
                 tools:text="Default"/>
 
