--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -52,7 +52,7 @@
                     android:text="@{product.category}"
                     android:paddingBottom="4dp"
                     android:textSize="@dimen/txt_13sp"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/text_primary_n_dark"
                     tools:text="Category" />
 
                 <!-- GST Number -->
@@ -62,7 +62,7 @@
                     android:text='@{product.productBarcode == null || product.productBarcode.isEmpty() ? "No barcode added" : product.productBarcode }'
                     android:paddingBottom="4dp"
                     android:textSize="@dimen/txt_13sp"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/text_primary_n_dark"
                     tools:text="Barcode" />
 
 
@@ -85,7 +85,7 @@
                         android:text="@{product.productStock}"
                         android:textStyle="bold"
                         android:textSize="@dimen/txt_14sp"
-                        android:textColor="@color/colorPrimary"
+                        android:textColor="@color/text_primary_n_dark"
                         android:paddingBottom="4dp"
                         tools:text="100" />
 
@@ -106,7 +106,7 @@
                     android:text='@{"Rs "+product.productPrice}'
                     android:paddingBottom="2dp"
                     android:textSize="@dimen/txt_13sp"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/text_primary_n_dark"
                     tools:text="Rs 200" />
                 <TextView
                     android:fontFamily="@font/montserrat_medium"
@@ -116,7 +116,7 @@
                     android:text='@{"MRP "+product.productMrp}'
                     android:paddingBottom="2dp"
                     android:textSize="@dimen/txt_13sp"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/text_primary_n_dark"
                     tools:text="MRP 200" />
 
                 <!-- Credit Amount -->
