--- a/app/src/main/res/layout/item_product_home.xml
+++ b/app/src/main/res/layout/item_product_home.xml
@@ -45,7 +45,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/tvProductName"
                 app:layout_constraintStart_toStartOf="parent"
                 android:text="@{productHome.productPrice}"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/text_primary_n_dark"
                 android:paddingBottom="4dp"
                 android:textStyle="bold"
                 tools:text="Rs 200" />
