--- a/app/src/main/res/layout/item_tax_details_products.xml
+++ b/app/src/main/res/layout/item_tax_details_products.xml
@@ -41,7 +41,7 @@
                     android:layout_height="wrap_content"
                     android:text="@{taxProducts.productName}"
                     android:textSize="@dimen/txt_16sp"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/text_primary_n_dark"
                     android:textStyle="bold"
                     android:paddingBottom="4dp"
                     tools:text="DEMO" />
@@ -74,7 +74,7 @@
                         android:layout_height="wrap_content"
                         android:gravity="end"
                         android:layout_marginEnd="@dimen/_10dp"
-                        android:textColor="@color/colorPrimary"
+                        android:textColor="@color/text_primary_n_dark"
                         android:textSize="@dimen/txt_16sp"
                         android:text="@{taxProducts.productTax}"
                         tools:text="5500.0000" />
@@ -84,7 +84,7 @@
                         android:layout_height="wrap_content"
                         android:gravity="end"
                         android:layout_marginEnd="@dimen/_10dp"
-                        android:textColor="@color/colorPrimary"
+                        android:textColor="@color/text_primary_n_dark"
                         android:textSize="@dimen/txt_16sp"
                         android:text="@{taxProducts.productStock}"
                         tools:text="5500.0000" />
