--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,6 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="white_n_black">#000000</color>
+    <color name="black_n_white">#fff</color>
+    <color name="white_n_dark">#FF6500</color>
+    <color name="white">#fff</color>
+
+    <color name="text_primary_n_dark">#FF6500</color>
+    <color name="text_color_main">#fff</color>
+
+    <color name="image_primary_n_dark">#FF6500</color>
+    <color name="image_primarydark_n_dark">#CC5000</color>
+
+    <color name="btn_primary_n_dark">#FF6500</color>
+    <color name="btn_background">#111111</color>
+    <color name="btn_light_grey">#71797E</color>
+
+    <color name="darker_green">#027148</color>
+
 
     <color name="colorPrimaryDark">#2e2b38</color>
     <color name="colorPrimary">#2e2b38</color>
@@ -8,17 +24,15 @@
 
     <color name="main_color">#822812</color>
 
-    <color name="lite_grey_200">#3f3f3f</color>
+    <color name="lite_grey_200">#222222</color>
     <color name="popup">#6D5D6E</color>
-    <color name="lite_grey">#D3D3D3</color>
+    <color name="lite_grey">#222222</color>
 
-    <color name="text_color_main">#fff</color>
     <color name="text_color_heading">#fff</color>
-    <color name="text_color_heading_reverse">#000</color>
+    <color name="text_color_heading_reverse">#fff</color>
 
     <color name="colorThumbChecked">#FF4081</color>
     <color name="colorThumbUnchecked">#B0BEC5</color>
     <color name="colorTrackChecked">#FFC1E3</color>
     <color name="colorTrackUnchecked">#CFD8DC</color>
-    <color name="darker_green">#027148</color>
 </resources>
